--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "ijkkg",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Traditional Karate",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Aaron McMahan <awmcmahan@outlook.com>",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.4.1",
     "gatsby-plugin-sharp": "^2.7.0",
     "gatsby-source-filesystem": "^2.4.0",
     "gatsby-transformer-sharp": "^2.5.21",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "node-sass": "4.14.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.12.1",
+    "eslint-config-blvd": "^1.0.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "2.1.2"
   },
   "keywords": [
