--- a/package.json
+++ b/package.json
@@ -5,34 +5,43 @@
   "version": "0.1.0",
   "author": "Aaron McMahan <awmcmahan@outlook.com>",
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "gatsby": "^2.25.1",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-manifest": "^2.5.1",
-    "gatsby-plugin-offline": "^3.3.1",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.4.1",
-    "gatsby-plugin-sharp": "^2.7.0",
-    "gatsby-source-filesystem": "^2.4.0",
-    "gatsby-transformer-sharp": "^2.5.21",
-    "node-sass": "4.14.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
+    "bootstrap": "^4.6.0",
+    "gatsby": "^3.1.2",
+    "gatsby-image": "^3.1.0",
+    "gatsby-plugin-canonical-urls": "^3.1.0",
+    "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-offline": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-remark-copy-linked-files": "^3.1.0",
+    "gatsby-remark-images": "^4.1.1",
+    "gatsby-remark-prismjs": "^4.1.0",
+    "gatsby-remark-responsive-iframe": "^3.1.0",
+    "gatsby-remark-smartypants": "^3.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-json": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "node-sass": "5.0.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-blvd": "^1.0.2",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "2.1.2"
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-blvd": "^1.1.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "2.2.1"
   },
   "keywords": [
     "gatsby"
